# qCommTest

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  qCommTest.pro  serial_port.cpp  serial_port.h  tcp_server.cpp
.github/workflows/: ci.yml
qdarkstyle/: style.qss
src/: main.cpp  mainwindow.cpp  mainwindow.h  tcp_server.h
src/qdarkstyle/: style.qrc
test/: test_tcp.c  test_tcp.cpp  test_tcp.py
